# magnesium

./: Cargo.toml  README.md  changelog.md
src/: attributes.rs  elements.rs  lib.rs
tests/: test_attributes.rs  test_elements.rs
