[package]
name = "magnesium"
version = "0.0.1"
description = "A minimal XML iterator"
repository = "https://github.com/Lokathor/magnesium"
readme = "README.md"
keywords = ["xml"]
categories = ["encoding", "parsing", "no-std"]
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
license = "Zlib"

[dependencies]
