[package]
name = "magnesium"
version = "1.0.0-alpha.0"
description = "A minimal XML iterator"
repository = "https://github.com/Lokathor/magnesium"
readme = "README.md"
keywords = ["xml"]
categories = ["encoding", "parsing", "no-std"]
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
license = "Zlib"

[features]
alloc = []

[dependencies]
